add send mail function

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-SENDER="your_email@gmail.com"
-PASSWORD="your_password"
-TO="poyatehu@maillink.top,poyatehu@maillink.top"
-SUBJECT="Hello from StudyGolang"
+PASSWORD="kwjqaxfbmmhbbbdd"
+HOST="smtp.qq.com"
+PORT=465
